regression-tests/test-results/apple-clang-14-c++2b/pure2-default-arguments.cpp.output
pure2-default-arguments.cpp2:6:61: error: no member named 'source_location' in namespace 'std'
    char const* fn = CPP2_UFCS_NONLOCAL(function_name)(std::source_location::current())
                                                       ~~~~~^
1 error generated.
